Bug fixes
Cannot confirm bug fixes until I deploy live and test on devices. Targeted bugs:

- Social links cut off on home and contact page on some devices
- hamburger icon press blocked by welcome text on home screen
- homepage timeline automatic scroll not working on iphone versions 12 and below
- typing in contact form message pushed send button further down which ended up cut off and unpressable to send message. should now allow the entire screen to be scrollable and able to scroll down to press the button and see social links

--- a/resume.css
+++ b/resume.css
@@ -7,7 +7,8 @@
 html, body{
   max-width: 100vw;
   max-height: 100vh;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 body {
@@ -85,6 +86,7 @@ body::before {
 
 nav{
   flex: 1;
+  z-index: 999;
 }
 
 .hamburger{
